--- a/app-bines-raices/index.html
+++ b/app-bines-raices/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App Biene Raices</title>
+    <!-- Agrega la CDN de Material Design Icons (MDI) en el archivo index.html -->
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
+
   </head>
   <body>
     <div id="app"></div>
